--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,8 +22,8 @@ jobs:
       with:
         name: webpack artifacts
         path: public/
-    needs: build
   test:
+    needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -36,11 +36,7 @@ jobs:
         name: webpack artifacts
         path: public
     - name: Use Node.js ${{ matrix.node-version }}
-    - uses: actions/download-artifact@main
-      with:
-        name: webpack artifacts
-        path: public
-    - name: npm install, and test
+    - uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install, and test
